// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<Container
  fluid={false}
>
  <Container
    align="center"
    className="pb-5"
    fluid={false}
  >
    <SectionHeading
      title="WordPress Developer"
    />
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      size="lg"
      variant="primary"
    >
      Apply Now
    </Button>
  </Container>
  <Row
    noGutters={false}
  >
    <Col
      md="8"
    >
      <Card
        body={false}
        border="primary"
        className="mb-2"
      >
        <CardBody
          style={
            Object {
              "background": "white",
            }
          }
        >
          <CardTitle>
            Overview
          </CardTitle>
          <Row
            noGutters={false}
          >
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Experiance
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  1
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Salary
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  60000
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Company
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Modern Tech
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Category
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Customer Service
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Qualification
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Bachelors
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Location
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Lahore
                </Badge>
              </h5>
            </Col>
          </Row>
        </CardBody>
      </Card>
      <Card
        body={false}
        border="primary"
        className="mb-2"
      >
        <CardBody
          style={
            Object {
              "background": "white",
            }
          }
        >
          <CardTitle>
            Description
          </CardTitle>
          <CardText
            style={
              Object {
                "textAlign": "justify",
              }
            }
          >
            This is test job description
          </CardText>
          <CardText
            style={
              Object {
                "textAlign": "justify",
              }
            }
          >
            This is test job description
          </CardText>
          <CardText
            style={
              Object {
                "textAlign": "justify",
              }
            }
          >
            This is test job description
          </CardText>
        </CardBody>
      </Card>
    </Col>
    <Col
      md="4"
    >
      <Card
        body={false}
        border="primary"
        className="mb-2"
      >
        <CardHeader>
          Company Profile 
        </CardHeader>
        <CardBody>
          <CardTitle>
            Modern Tech
             
          </CardTitle>
          <CardText>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </CardText>
          <Button
            active={false}
            disabled={false}
            variant="primary"
          >
            View Company Jobs
          </Button>
        </CardBody>
      </Card>
    </Col>
  </Row>
</Container>
`;

exports[`renders the component 2`] = `
<Container
  fluid={false}
>
  <Container
    align="center"
    className="pb-5"
    fluid={false}
  >
    <SectionHeading
      title="WordPress Developer"
    />
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      variant="secondary"
    >
      Withdraw Application
    </Button>
  </Container>
  <Row
    noGutters={false}
  >
    <Col
      md="8"
    >
      <Card
        body={false}
        border="primary"
        className="mb-2"
      >
        <CardBody
          style={
            Object {
              "background": "white",
            }
          }
        >
          <CardTitle>
            Overview
          </CardTitle>
          <Row
            noGutters={false}
          >
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Experiance
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  1
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Salary
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  60000
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Company
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Modern Tech
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Category
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Customer Service
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Qualification
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Bachelors
                </Badge>
              </h5>
            </Col>
            <Col
              className="overview-item"
              sm="6"
              xs="12"
            >
              <p>
                <FaBeer />
                 
                Location
                :
              </p>
              <h5>
                <Badge
                  pill={true}
                  variant="primary"
                >
                  Lahore
                </Badge>
              </h5>
            </Col>
          </Row>
        </CardBody>
      </Card>
      <Card
        body={false}
        border="primary"
        className="mb-2"
      >
        <CardBody
          style={
            Object {
              "background": "white",
            }
          }
        >
          <CardTitle>
            Description
          </CardTitle>
          <CardText
            style={
              Object {
                "textAlign": "justify",
              }
            }
          >
            This is test job description
          </CardText>
          <CardText
            style={
              Object {
                "textAlign": "justify",
              }
            }
          >
            This is test job description
          </CardText>
          <CardText
            style={
              Object {
                "textAlign": "justify",
              }
            }
          >
            This is test job description
          </CardText>
        </CardBody>
      </Card>
    </Col>
    <Col
      md="4"
    >
      <Card
        body={false}
        border="primary"
        className="mb-2"
      >
        <CardHeader>
          Company Profile 
        </CardHeader>
        <CardBody>
          <CardTitle>
            Modern Tech
             
          </CardTitle>
          <CardText>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
          </CardText>
          <Button
            active={false}
            disabled={false}
            variant="primary"
          >
            View Company Jobs
          </Button>
        </CardBody>
      </Card>
    </Col>
  </Row>
</Container>
`;
